--- a/index.html
+++ b/index.html
@@ -15,12 +15,10 @@
                 <button>Add</button>
             </div>
             <ul id="list-container">
-                <!-- <li class="checked">Task List 1</li>
-                <li>Task List 2</li>
-                <li>Task List 3</li> -->
+                
             </ul>
         </div>
     </div>
-    
+    <script src="app.js"></script>
 </body>
 </html>
