--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <h2>To-Do List</h2>
             <div class="row">
                 <input type="text" id="input-box" placeholder="add your task">
-                <button>Add</button>
+                <button onclick="addTask()">Add</button>
             </div>
             <ul id="list-container">
                 
